welcome.lessons.welcome.conditions.Conditions.scala.code
if buggle1 estFaceMur recule  ;
else avance;